# gpio

./: API  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  acinclude.m4  autogen.sh  build_rpm.sh.in  configure.in  device_notes  get_target.sh  gpio-kmod.spec.in  gpio-redhat.spec.in  gpio.spec.in  make_slack.in  slack-desc.in  slack_doinst.sh
drv/: Makefile-2.6.in  Makefile.am  gpio.c  gpio.h
utils/: Makefile.am  gpitest.cpp  gpitest.h  gpotest.cpp  gpotest.h  rconf.cpp  rconf.h  rgpio.cpp  rgpio.h
